# fantasy-text-creator

./: .env.example  .gitignore  PROGRESS.md  README.md  SKILLS_MAP.md  SYSTEM_DESIGN.md  action-battle-choreographer.skill  beta-reader-simulator.skill  character-arc-engineer.skill  conflict-tension-designer.skill  consistency-auditor.skill  dialogue-voice-engine.skill  fantasy-novel-assembler.skill  fantasy-worldbuilder.skill  fantasy_worldbuilding_bible.docx  foreshadow-twist-weaver.skill  generate_images.py  magic-system-architect.skill  pacing-rhythm-optimizer.skill  plot-architecture-engine.skill  prose-style-engine.skill  pyproject.toml  relationship-web-mapper.skill  revision-rewrite-engine.skill  scene-chapter-composer.skill  series-expansion-planner.skill  species-culture-designer.skill  writing-workflow.skill
extracted_skills/action-battle-choreographer/action-battle-choreographer/: SKILL.md
extracted_skills/beta-reader-simulator/beta-reader-simulator/: SKILL.md
extracted_skills/character-arc-engineer/character-arc-engineer/: SKILL.md
novelcraft/: __init__.py  bible.py  cli.py  config.py  dashboard.py  jobs.py  writer.py
novelcraft/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  ollama_provider.py  registry.py
novelcraft/templates/: behavior.md  dashboard.html
projects/셀라의 문/: behavior.md  project.json
projects/테스트작품/: behavior.md  project.json
projects/하모니와 디스코드/: project.json
prompts/: expand_chapter.md  self_review.md  summarize_chapter.md  write_chapter.md
scripts/: export_docx.py  generate_sella_images.py
(+96 files in other folders)
